# pycode-info

./: .gitignore  MakeFile  README.md  main.py  pyproject.toml  t.sh  test.seg  zykl.py
.github/workflow/: release.yml
.github/workflows/: release.yml
src/: colors.py  lang_info.py
src/pycode_info/: __init__.py
test/test_files/: abc.java
tools/: update_version.py
